--- a/src/app/about/contactus/contactus.component.html
+++ b/src/app/about/contactus/contactus.component.html
@@ -1,5 +1,5 @@
 <p>contactus works!</p>
-<a routerLink="/address">address</a>
-<a routerLink="/phone">phone</a>
+<a routerLink="./address">address</a>
+<a routerLink="phone" style="margin-left: 1rem;">phone</a>
 <router-outlet></router-outlet>
 
