--- a/src/app/about/contactus/contactus.component.html
+++ b/src/app/about/contactus/contactus.component.html
@@ -1,5 +1,9 @@
 <p>contactus works!</p>
-<a routerLink="./address">address</a>
-<a routerLink="phone" style="margin-left: 1rem;">phone</a>
+<!--
+<a routerLink="[{ outlets: { contactus: ['address'] } }]">address</a>
+<a routerLink="[{ outlets: { contactus: ['phone'] } }]" style="margin-left: 1rem;">phone</a>
+-->
+<a [routerLink]="[{outlets:{contactus: ['address']}}]">address</a>
+<a [routerLink]="[{outlets:{contactus: ['phone']}}]" style="margin-left: 1rem;">phone</a>
 <router-outlet></router-outlet>
 
