--- a/src/app/about/contactus/contactus.component.html
+++ b/src/app/about/contactus/contactus.component.html
@@ -3,7 +3,10 @@
 <a routerLink="[{ outlets: { contactus: ['address'] } }]">address</a>
 <a routerLink="[{ outlets: { contactus: ['phone'] } }]" style="margin-left: 1rem;">phone</a>
 -->
-<a [routerLink]="[{outlets:{contactus: ['address']}}]">address</a>
+<a routerLink="/home">home</a>
+<a [routerLink]="[{outlets:{contactus: ['address']}}]" style="margin-left: 1rem;">address</a>
 <a [routerLink]="[{outlets:{contactus: ['phone']}}]" style="margin-left: 1rem;">phone</a>
+<a routerLink="address" style="margin-left: 1rem;">address</a>
+<a routerLink="phone" style="margin-left: 1rem;">phone</a>
 <router-outlet></router-outlet>
 
