--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/home">Home</a>
       <a mat-list-item routerLink="/home/homebar">Homebar</a>
-      <a mat-list-item routerLink="/about">About</a>
+      <a mat-list-item routerLink="/about/fix">About</a>
       <a mat-list-item routerLink="/">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
